Closed Bug 1640412 Opened 5 years ago Closed 5 years ago

Include failure id for status=unavailable too.

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: jrmuizel, Assigned: jrmuizel)

Details

Attachments

(1 file)

We get a fair amount of this on modern hardware.
It would be good to know why.

We get a fair amount of this on modern hardware.
It would be good to know why.

Attachment #9151278 - Attachment description: Bug 1640412 - Include failure id for status=unavailable too. → Bug 1640412 - Include failure id for status=unavailable/blocked too.
Pushed by jmuizelaar@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/df5bfb667b9d Include failure id for status=unavailable/blocked too. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: