Bug 1640412 - Include failure id for status=unavailable/blocked too. r=aosmond

We get a fair amount of this on modern hardware.
It would be good to know why.

Differential Revision: https://phabricator.services.mozilla.com/D76605